[package]
name = "gprl-lib-demo"
version = "0.1.2"
authors = ["Luo Xiangyong <luoxiangyong@topgridcloud.com>"]
edition = "2018"
description = "一个简单的库演示"
license = "MIT"
keywords = ["demo", "rlib"]
readme = "README.md"
documentation = "https://github.com/luoxiangyong/gprl_lib_demo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
